<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:backgroundTint="@color/black"
        android:elevation="15dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shorten_urls"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/grand_hotel"
                android:text="@string/cutly"
                android:textColor="@color/yellow_light" />

            <EditText
                android:id="@+id/et_long_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/etbg"
                android:hint="@string/url_text_msg"
                android:padding="10dp"
                android:textColorHint="@color/grey_light" />

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/shorten_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/yellow"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/buttonbg"
                    android:text="@string/shorten_txt"
                    app:spinning_bar_color="@color/black"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/invalid_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_toRightOf="@id/shorten_btn"
                    android:layout_centerVertical="true"
                    android:text=""
                    android:textColor="@color/yellow_light"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/delete_btn"
                    android:textColor="@color/black_solid"
                    android:text="Delete"
                    android:visibility="gone"
                    android:backgroundTint="@color/yellow_light"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:text="@string/shortened_urls"
        android:textColor="@color/grey_mod"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:weightSum="3">

            <ImageView
                android:id="@+id/no_url_img"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:contentDescription="@string/no_any_urls_yet"
                android:padding="50dp"
                android:src="@drawable/ic_no_data" />

            <TextView
                android:id="@+id/no_url_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="0"
                android:text="@string/no_url_text"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-6dp"
            android:layout_marginBottom="1dp"
            android:padding="8dp"
            tools:listitem="@layout/single_item" />

    </RelativeLayout>


</LinearLayout>